hphp/hack/test/typecheck/test_question_mark_end_tag_errors.php.exp
File "test_question_mark_end_tag_errors.php", line 5, characters 1-2:
Hack does not allow the closing ?> tag (Parsing[1002])
