hphp/hack/test/typecheck/test_question_mark_end_tag_errors.php
<?hh // partial
function foo(): void {
  $a = 5;
}
?>
